--- a/colonies.html
+++ b/colonies.html
@@ -145,7 +145,8 @@
 						I wrongly have been saying that Lalande is very young,
 						because of its bright ray system and sharp features. In fact
 						according to crater-counting, the standard method for dating
-						crater age, it is about 2.8 billion years old. More on this
+						crater age, it is about 2.8 billion years old.
+						That still makes it yourger than 99% of craters. More on this
 						on the Lalande page.
 					</span>
 				</div>
