--- a/machines.html
+++ b/machines.html
@@ -139,8 +139,9 @@
 				are important here:
 					<ul>
 						<li>Thermal wadis - which are masses of solid stone
-				that store heat far better than the powdery soil. If a rover can
-				snuggle up to one and throw a reflective tarp over itself to slow
+				that store the sun's heat far better than the powdery soil. If a rover can
+				snuggle up to one at sundown and throw a reflective tarp over
+				itself to slow
 				heat loss, the cold it has to withstand overnight is greatly reduced.
 				</li>
 					<li>Nuclear power - there is no reason to fear nuclear power on the
@@ -269,7 +270,8 @@
 					with no additives other than a thin application of a
 					sizing chemical to the surface of the threads. This
 					makes construction with basalt much easier.
-					<br><br>
+				</p>
+				<p>
 					Some highlands materials spun into fibers will also
 					have good tension strength, but likely need to
 					be processed to change their chemical composition
@@ -285,17 +287,31 @@
 					protective matrix. Still, unless deposits very high
 					in silica are found, resource-intensive processing
 					will be needed in the highlands to produce
-					materials capable of containing an atmosphere.
-					<br><br>
+					materials capable of containing an atmosphere. That
+					complicates construction of habitats a great deal, a
+					principal reason why only a small human colony will be
+					made at the pole, and then construction will be concentrated
+					at Lalande.
+				</p>
+				<p>
 					All these designs absolutely depend on the use of agile
 					robots. They don't have to be carpenters, but they do
 					need the manual skills of your typical 5 year old.
 					Guided by human operators on Earth, that would be enough.
 					Several development missions would need to go to the Moon
 					to test and refine that technology.
-					<br><br>
+				</p>
+				<p>
 					If you have those robots, what follows is the best way to
-					build. By far, no contest. So, if you perhaps calculate that
+					build. By far, no contest. It is far less energy intensive,
+					and far more adaptable, than anything else I've seen. The
+					equipment needed to start is far less, and less complex.
+					Except for the robots, of course, which are so broadly useful
+					they are still quite mass-efficient, even if they need a bunch
+					of modular drop-in replacement parts shipped with them. 
+				</p>
+				<p>
+					So, if you perhaps calculate that
 					such robots are a long way off, still by the time Cernan's
 					Promise was fully developed, they would exist and have been
 					used for the bulk of that construction. We can quibble
