tab layout work
Former-commit-id: 70c9c58674c99b3c1b3b1b61b92b16deae5966d2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and space travel."
      <li>Blog</li>
      <li>Comments</li>
     </ul>
-				<div class="innerDiv">
+				<div class="innerDiv under-tabs">
 					<h1>Realistic Lunar Colony, Coming Online</h1>
 					<p>
 This project is building a series of virtual colonies on the Moon. They will be
