--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Moonwards
+title: Moonwards Virtual Moon Colony Project
 stylesheet: "css/main.nest.sass.css"
-description: "A realistic lunar colony. Space settlement will
-change the future of humanity. This
-virtual Moon colony will show the technology and science involved,
-the challenges and opportunites of low gravity, hard vacuum, radiation, meteors,
-and space travel."
+description: "A realistic virtual lunar colony, showing how space
+settlement will affect our future. The technology and science of living
+on the Moon, the challenges and opportunities of low gravity, hard vacuum,
+high radiation, intense sun, large temperature swings, and the substances
+of the Moon."
 ---
 {%include headerMain.html%}
 <div class="container">
@@ -14,8 +14,7 @@ and space travel."
 			<div class="outerDiv">
     <ul class="tabs">
      <li><a href="javascript:void(0)" class="tabheads"
-         onclick="openContent(event,'intro')"
-         id="defaultOpen">Intro</a></li>
+         onclick="openContent(event, 'intro')" id="defaultOpen">Intro</a></li>
      <li><a href="javascript:void(0)" class="tabheads"
          onclick="openContent(event,'blog')">Blog</a></li>
      <li><a href="javascript:void(0)" class="tabheads"
