set up blog tab with post index
Former-commit-id: f01df128a2f955556a30b6c84921261a142938fa

--- a/index.html
+++ b/index.html
@@ -20,93 +20,79 @@ of the Moon."
      <li><a href="javascript:void(0)" class="tabheads"
          onclick="openContent(event,'comments')">Comments</a></li>
     </ul>
-				<div class="innerDiv under-tabs tabcontent"
+			<div class="innerDiv under-tabs tabcontent"
      id="intro">
-					<h1>Realistic Lunar Colony, Coming Online</h1>
-					<p>
-							This project is building a series of virtual colonies on the Moon. They will be
-							richly detailed and interactive presentations that are entirely
-							plausible, technically and scientifically.
-							They will examine all the questions, consider all the implications. When humanity
-							undertakes ventures on the scale of space settlement, it matters a great deal
-							how many people have given it real thought beforehand. These colonies serve
-							that purpose.
+						<h1>Realistic Lunar Colony, Coming Online</h1>
+						<p>
+								This project is building a series of virtual colonies on the Moon. They will be
+								richly detailed and interactive presentations that are entirely
+								plausible, technically and scientifically.
+								They will examine all the questions, consider all the implications. When humanity
+								undertakes ventures on the scale of space settlement, it matters a great deal
+								how many people have given it real thought beforehand. These colonies serve
+								that purpose.
+						</p>
+						<p>
+					 The first colony created will show a full town with a population of 20,000. It will have developed industries and facilities, spacious beautiful architecture, transport systems moving high volumes of people and cargo around the Moon and the solar system.
+					It shows what happens just beyond the tipping point, when technology enables a space boom. To evaluate the importance of space exploration, this is the stage that must be understood.
 					</p>
 					<p>
-				 The first colony created will show a full town with a population of 20,000. It will have developed industries and facilities, spacious beautiful architecture, transport systems moving high volumes of people and cargo around the Moon and the solar system.
-				It shows what happens just beyond the tipping point, when technology enables a space boom. To evaluate the importance of space exploration, this is the stage that must be understood.
-				</p>
-				<p>
-					The next two colonies work outwards from there... forwards to the city that
-					grows from the town, when technology allows a segmented glass dome to be placed over
-					a crater 22 km across, becoming home to a million people... and backwards to
-					the first missions that develop the basic techniques and infrastructure that
-					make it all possible.
-				</p>
-				<p>
-					These environments will be places to explore, create, collaborate, tell stories,
-					and above all to learn and to contemplate our future. To that end, the project
-					assumes an ideal political environment, in which a broad alliance of countries
-					pursues lunar settlement with determination and vision, making the best
-					technical decisions and investing as much as it takes to do it properly. In this
-					way the project can educate regarding the real gamut of options before us,
-					and the complete scope of such a vast endeavor.
-				</p>
-				<p>
-					The entire project will always be open source, free of copyright, and free of
-					charge. In this way, as long as it has a strong core
-					framework, it has incredible potential for growth. Some virtual world project
-					along these lines is going to explode in the near future. The time is right.
-					Once a world is vivid enough, and provides the right tools, it will mushroom
-					as talented people see the potential and dive in. Never have there
-					existed ways for so very many people to collaborate so powerfully.
-					Moonwards can reach towards two final frontiers -
-					the one above our heads, and the one inside our heads. Let us see how powerful
-					vision can be.
-				</p>
-				<p>
-					All the project's files are on the <a href="https://github.com/briligg/moonwards">
-					GitHub repository of Moonwards</a>. It is at
-					an early stage. It will always be 'under construction', though - that's its
-					nature. You will see this revamped website filling out in the coming weeks,
-					and then get new content regularly as the project advances. The same
-					will happen to the repo, after that. You will see the models changing and new
-					models being added, animated, and supplemented with other media.
-					When the first, simple version of the virtual colony comes online, then we are
-					really rolling. If you are
-					inclined to take part, please contact me, comment in one of the sections
-					provided, or use the other contact
-					options shown on the <a href="project.html">Project</a> page.
-				</p>
-				<p class="byline">
-				Jan. 11, 2017 by Kim -- kim@moonwards.com
-			</p>
+						The next two colonies work outwards from there... forwards to the city that
+						grows from the town, when technology allows a segmented glass dome to be placed over
+						a crater 22 km across, becoming home to a million people... and backwards to
+						the first missions that develop the basic techniques and infrastructure that
+						make it all possible.
+					</p>
+					<p>
+						These environments will be places to explore, create, collaborate, tell stories,
+						and above all to learn and to contemplate our future. To that end, the project
+						assumes an ideal political environment, in which a broad alliance of countries
+						pursues lunar settlement with determination and vision, making the best
+						technical decisions and investing as much as it takes to do it properly. In this
+						way the project can educate regarding the real gamut of options before us,
+						and the complete scope of such a vast endeavor.
+					</p>
+					<p>
+						The entire project will always be open source, free of copyright, and free of
+						charge. In this way, as long as it has a strong core
+						framework, it has incredible potential for growth. Some virtual world project
+						along these lines is going to explode in the near future. The time is right.
+						Once a world is vivid enough, and provides the right tools, it will mushroom
+						as talented people see the potential and dive in. Never have there
+						existed ways for so very many people to collaborate so powerfully.
+						Moonwards can reach towards two final frontiers -
+						the one above our heads, and the one inside our heads. Let us see how powerful
+						vision can be.
+					</p>
+					<p>
+						All the project's files are on the <a href="https://github.com/briligg/moonwards">
+						GitHub repository of Moonwards</a>. It is at
+						an early stage. It will always be 'under construction', though - that's its
+						nature. You will see this revamped website filling out in the coming weeks,
+						and then get new content regularly as the project advances. The same
+						will happen to the repo, after that. You will see the models changing and new
+						models being added, animated, and supplemented with other media.
+						When the first, simple version of the virtual colony comes online, then we are
+						really rolling. If you are
+						inclined to take part, please contact me, comment in one of the sections
+						provided, or use the other contact
+						options shown on the <a href="project.html">Project</a> page.
+					</p>
+					<p class="byline">
+					Jan. 11, 2017 by Kim -- kim@moonwards.com
+				 </p>
 			</div>
-		</div>
-  <div class="tabcontent" id="blog">
-	   <iframe src="blogMain.html"></iframe>
-  </div>
-  <div class="tabcontent" id="comments">
-    Comment section!!!
-  </div>
+	  <div class="innerDiv under-tabs tabcontent" id="blog">
+		   <iframe src="blogMain.html" width="100%" style="border:none;" id="iFrameResizer0"></iframe>
+     <script type="text/javascript" src="js/iframeResizer.min.js"></script>
+	  </div>
+	  <div class="tabcontent" id="comments">
+	    Comment section!!!
+	  </div>
+ 	</div>
 	</section>
+
 {%include asideMain.html%}
 </div>
-<div class="container">
-	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
-				<p>The blog will go here. I'm in the process of getting that working
-					using Jekyll, but i'm a noob and it is taking time... Having the
-					blog here will mean no tracking cookies or extraneous stuff loading.
-					For now, well, the Blogger site is
-					<a href="https://moonwards1.blogspot.com/">here</a>, still. And it will remain
-					there - this will be an additional place where all that is posted.
-				</p>
-			</div>
-		</div>
-	</section>
-</div>
-
 {%include RSSparserMiha.html%}
 {% include TabJS.html%}
