--- a/blogMain.html
+++ b/blogMain.html
@@ -11,22 +11,30 @@ layout: null
  </head>
  <body>
   <section class="container">
+  	<header>
+     <p>
+       What if a group of nations was determined to
+       colonize the Moon, and they based their decisions only on
+       technical and economic merit?
+     </p>
+     <p>All blog posts linked below:</p>
+  	</header>
   <ul>
   {% for post in site.posts %}
     {% if forloop.index <= 5 %}
     <li>
-     <h2><a href="{{post.url}}">{{post.title}}</a></h2>
-     {{ post.excerpt }}
+     <h1><a href="{{post.url}}">{{post.title}}</a></h1>
+     <h3>{{ post.excerpt }}</h3>
     </li>
     {% else %}
     <li>
-     <a href="{{post.url}}">{{post.title}}</a>
-     {{ post.content | truncatewords: 50 }}
+     <h2><a href="{{post.url}}">{{post.title}}</a></h2>
+     <h3>{{ post.content | truncatewords: 50 }}</h3>
     </li>
     {% endif%}
   {% endfor %}
   </ul>
-   <p>See full index of posts</p>
   </section>
+ <!--<script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>-->
  </body>
 </html>
