blog post formatting, addition of blog images
Former-commit-id: e083b679cfeb99a44a0c1ffe21a1b4247d4cdc3c

--- a/colonies.html
+++ b/colonies.html
@@ -18,7 +18,7 @@ ongoing high investment changes the possibilities and the best path."
 
 	<div class="container" id="lalande">
 		<section>
-			<div class="outerDiv">
+			<article class="outerDiv">
 				<div class="innerDiv">
 					<h1>Lalande Crater: Young, Equatorial, Mineral-rich</h1>
 					<p>
@@ -95,7 +95,7 @@ ongoing high investment changes the possibilities and the best path."
 					</div>
 
 				</div>
-			</div>
+			</article>
 		</section>
 {% include asideColoniesLalande.html%}
 	</div>
@@ -103,7 +103,7 @@ ongoing high investment changes the possibilities and the best path."
 <!--The above include has the include for the comments section -->
 	<div class="container" id="peary">
 		<section>
-			<div class="outerDiv">
+			<article class="outerDiv">
 				<div class="innerDiv">
 					<h1>Peary Crater: Water Inside, Eternal Sun Outide</h1>
 					<p>
@@ -183,7 +183,7 @@ ongoing high investment changes the possibilities and the best path."
 						water and metals and may be a better source for needs in open space.
 					</p>
 				</div>
-			</div>
+			</article>
 		</section>
 		<aside>
 			<figure class="sideDiv">
@@ -211,16 +211,9 @@ ongoing high investment changes the possibilities and the best path."
 			</figure>
 		</aside>
 		</div>
-		<div class="container_SF_iframe">
-		<section>
-			<div class="SF-Div">
-				We'd like to know what you think - comment section coming...
-			</div>
-		</section>
-		</div>
 		<div class="container" id="orbital">
 			<section>
-			<div class="outerDiv">
+			<article class="outerDiv">
 				<div class="innerDiv">
 					<h1>Orbital colonies - Now we travel the heavens at will</h1>
 					<p>
@@ -228,6 +221,6 @@ ongoing high investment changes the possibilities and the best path."
 						those asteroids are a great place to start a space station.
 					</p>
 					</div>
-				</div>
+				</article>
 			</section>
 		</div>
