--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ of the Moon."
 	<section>
 			<div class="outerDiv">
     <ul class="tabs">
-     <li><a href="javascript:void(0)" class="tabheads"
+     <li><a href="javascript:void(0)"
          onclick="openContent(event, 'intro')" id="defaultOpen">Intro</a></li>
-     <li><a href="javascript:void(0)" class="tabheads"
+     <li><a href="javascript:void(0)"
          onclick="openContent(event,'blog')">Blog</a></li>
-     <li><a href="javascript:void(0)" class="tabheads"
+     <li><a href="javascript:void(0)"
          onclick="openContent(event,'comments')">Comments</a></li>
     </ul>
-			<div class="innerDiv under-tabs tabcontent"
+			<article class="innerDiv under-tabs tabcontent"
      id="intro">
 						<h1>Realistic Lunar Colony, Coming Online</h1>
 						<p>
@@ -83,17 +83,17 @@ of the Moon."
 					<p class="byline">
 					Jan. 11, 2017 by Kim -- kim@moonwards.com
 				 </p>
-			</div>
-	  <div class="innerDiv under-tabs tabcontent" id="blog">
+			</article>
+	  <article class="innerDiv under-tabs tabcontent" id="blog">
 		   <iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
      <!--<script>var iframes = iFrameResize(null, '#iFrameResizer0');</script>-->
-	  </div>
-	  <div class="innerDiv under-tabs tabcontent" id="comments">
+	  </article>
+	  <article class="innerDiv under-tabs tabcontent" id="comments">
      <h1>This will take some work...</h1>
-	    <p>It could be a little tricky. There is a way to set up comments without using a service like Disqus. It's an open-source package known as <a href="https://staticman.net/demo">Static Man</a>. The demo video makes it look easy, but if my experience of the last month is any guide, it is not as easy as they make it sound... <br><br>But it would mean that the 'rights' to those comments are not ceded to Disqus, and there is no need to pay in order to avoid included advertising, and there is no tracking. I just have to see if it can be made easy to comment without registering, but on the other hand keep the teeming hordes of comment spammers at bay.
+	    <p>This site has been written by someone who doesn't do it for a living or anything, and learned how mostly as she went along. Putting in a comment section that isn't littered with spam and doesn't involve a paid service or a bunch of poorly targeted ads means learning how to work with a database. With the traffic this site currently has, it should be manageable to moderate comments and maintain the database myself, however this is another new thing i have to learn. For now, you can comment at the <a target="_blank" href="http://moonwards1.blogspot.com/">Blogger blog</a>, or on the <a href="http://www.moonwards.com/forum/">forum</a>.
      </p>
     <br>
-	  </div>
+	  </article>
  	</div>
 	</section>
 
