--- a/blogMain.html
+++ b/blogMain.html
@@ -24,12 +24,12 @@ layout: null
     {% if forloop.index <= 5 %}
     <li>
      <h1><a href="{{post.url}}">{{post.title}}</a></h1>
-     <h3>{{ post.excerpt }}</h3>
+     <h3>{{ post.excerpt | strip_html}}</h3>
     </li>
     {% else %}
     <li>
      <h2><a href="{{post.url}}">{{post.title}}</a></h2>
-     <h3>{{ post.content | truncatewords: 50 }}</h3>
+     <h3>{{ post.content | truncatewords: 50 | strip_html}}</h3>
     </li>
     {% endif%}
   {% endfor %}
