fixed some nesting errors and redundant content
Former-commit-id: e93c019b6752ba0164c4ab562525001e8d705417

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@ of the Moon."
 {%include headerMain.html%}
 <div class="container">
 	<section>
-			<div class="outerDiv">
-    <ul class="tabs">
-     <li><a href="javascript:void(0)"
-         onclick="openContent(event, 'intro')" id="defaultOpen">Intro</a></li>
-     <li><a href="javascript:void(0)"
-         onclick="openContent(event,'blog')">Blog</a></li>
-     <li><a href="javascript:void(0)"
-         onclick="openContent(event,'comments')">Comments</a></li>
-    </ul>
-			<article class="innerDiv under-tabs tabcontent"
-     id="intro">
+		<div class="outerDiv">
+			<ul class="tabs">
+				<li>
+					<a href="javascript:void(0)"
+					onclick="openContent(event, 'intro')" id="defaultOpen">Intro</a>
+				</li>
+				<li>
+					<a href="javascript:void(0)"
+					onclick="openContent(event,'blog')">Blog</a>
+				</li>
+				<li><a href="javascript:void(0)"
+					onclick="openContent(event,'comments')">Comments</a>
+				</li>
+			</ul>
+			<article class="innerDiv under-tabs tabcontent" id="intro">
 						<h1>Realistic Lunar Colony, Coming Online</h1>
 						<p>
 								This project is building a series of virtual colonies on the Moon. They will be
