figured out page generation
Former-commit-id: 068a24bb131866e0e39ea9b3fe9ba039239821cd

--- a/learn.html
+++ b/learn.html
@@ -42,7 +42,7 @@ of the Moon."
 					setTimeout(function(){subDraw()},2000)
 				</script>
 				<!--geogebra applet-->
-					<script async type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
+					<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
 					<div style="width:500px;height:355px;display:block" id="applet_container1"></div>
 				<!--end geogebra applet-->
 			</div>
