better jpgs, add to lalande.html
Former-commit-id: 7f8bcba01f2edc5824b270621ec55698e4ca83cc [formerly 1ccb99793e7640ea8cffbe15157b5646bab4c473]
Former-commit-id: 26a023f6c3077e522c0082f6d9a14f1cd96bc051

--- a/lalande.html
+++ b/lalande.html
@@ -138,12 +138,27 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 					</figure>
 					<figure class="pix" id="thorium" style="max-width: 703px;">
 						<img src="img/Lunar_Thorium_hotspots.jpg">
-						<figcaption>Map of distribution of thorium on the Moon, by NASA's Clementine probe</figcaption>
-							<p>
+						<figcaption>Map of distribution of thorium on the Moon, by NASA's Clementine probe. Lalande is in the square.</figcaption>
+							<p>Here we can talk about <a class="http://www.psrd.hawaii.edu/Oct04/SaU169.html">SaU 169</a>, a meteorite from the Moon that the linked report explains was traced to an origin near Lalande by a rather large team of people who did a rather extensive study on the little thing. The hotspot shows a thorium level of 12 ppm. The meteorite had a level of 33 ppm<sup class="note tooltip" data-tooltip-content="#ThoriumPPM">
+							[1]</sup> in the impact breccia<sup class="note tooltip" data-tooltip-content="#Breccia">
+							[2]</sup> that mostly composed it.
        </p>
-					</figure>
-					<figure class="pix" id="boulders" style="max-width: 750px;">
-						<img src="img/Lal-boulders1.jpg">
+</figure>
+<div class="tooltip_templates">
+	<span id="ThoriumPPM">
+             <p>From the report:</p>
+<blockquote> Highly evolved igneous rocks are present on the Moon. Evolved rocks formed from magmas that fractionally crystallized, leaving a residual magma rich in elements that do not readily enter the major rock-forming minerals. The most common class of evolved lunar rock is KREEP, an acronym referring to enrichments (compared to other lunar materials) in potassium (K), rare earth elements (REE), and phosphorus (P). They also contain enrichments in other elements such as zirconium, thorium, and uranium. The formation of evolved magmas involved extensive fractional crystallization in the lunar magma ocean, a huge magmatic system that surrounded the Moon soon after its formation, followed by partial melting of rocks formed from the residual magma. These secondary magmas could have fractionally crystallized further, creating rocks much richer than those observed so far. SaU 169 is without question a KREEP rock. Its thorium (Th) concentration is 33 parts per million in the large impact melt breccia that composes most of the rock. This is higher than all but a few small rock clasts in breccias brought back by the Apollo missions. An interesting feature of the SaU 169 impact melt breccia is that it has a much lower K/Th ratio (137) compared to the average KREEPy rocks (360). This indicates that K and Th, which usually have similar geochemical behavior in magmas, became decoupled from each other, signifying a complicated magmatic history of the lithologies that predated the formation of the impact melt. The rest of the rock is also KREEPy, but does not contain as much Th or REE as does the impact melt breccia, and K/Th is the normal KREEP value.</p>
+												</span>
+</div>
+<div class="tooltip_templates">
+	<span id="Breccia">
+<img href="https://www.moonwards.com/img/SaU169-cross-section.jpg">
+<p>
+Breccia refers to rocks made of smaller chunks glued together by a matrix of another material. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. There is <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">basalt in Italy</a> with 250 ppm of thorium.
+</p>
+</span>
+</div>
+<figure class="pix" id="boulders" style="max-width: 750px;">						<img src="img/Lal-boulders1.jpg">
 						<figcaption>captions coming</figcaption>
 					</figure>
 					<figure class="pix" style="max-width: 750px;">
