--- a/lalande.html
+++ b/lalande.html
@@ -152,7 +152,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 </div>
 <div class="tooltip_templates">
 	<span id="Breccia">
-<img href="https://www.moonwards.com/img/SaU169-cross-section.jpg">
+<img src="https://www.moonwards.com/img/SaU169-cross-section.jpg">
 <p>
 Breccia refers to rocks made of smaller chunks glued together by a matrix of another material. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. There is <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">basalt in Italy</a> with 250 ppm of thorium.
 </p>
